--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -20,8 +20,8 @@ jobs:
           sudo -- snap install --classic goreleaser
 
       - env:
-          GH_TOKEN: ${{ github.token }}
           GITHUB_REPOSITORY: ${{ github.repository }}
+          GITHUB_TOKEN: ${{ github.token }}
           GPG_SIGNING_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
           GPG_SIGNING_PASSWORD: ${{ secrets.GPG_SIGNING_PASSWORD }}
         run: |-
