--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -19,4 +19,4 @@ jobs:
       - env:
           GH_TOKEN: ${{ github.token }}
         run: |-
-          git describe --tags --abbrev=0 | tee -- /dev/stderr | xargs -r -- gh release create --draft=true --
+          git describe --tags --abbrev=0 | tee -- /dev/stderr | xargs -r -- gh release create --
