--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -3,6 +3,9 @@ name: Publish Draft Release with Binaries
 
 on:
   release:
+    types:
+      - published
+      - released
 
 permissions:
   contents: write
