--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -4,7 +4,7 @@ name: Publish Draft Release with Binaries
 on:
   workflow_dispatch:
   release:
-    types: [created, published]
+    types: [created, edited]
 
 permissions:
   contents: write
@@ -25,7 +25,7 @@ jobs:
 
       - env:
           GH_TOKEN: ${{ github.token }}
-          GPG_SIGNING_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+          GPG_SIGNING_KEY: ${{ secrets.GPG_SIGNING_KEY }}
           GPG_SIGNING_PASSWORD: ${{ secrets.GPG_SIGNING_PASSWORD }}
         run: |-
           ./scripts/publish
