--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -5,6 +5,9 @@ on:
   workflow_dispatch:
   release:
     types: [created, edited]
+  push:
+    tags:
+      - "v*"
 
 permissions:
   contents: write
@@ -20,8 +23,9 @@ jobs:
 
       - uses: actions/setup-go@v5
 
-      - run: |-
-          sudo -- snap install --classic goreleaser
+      - uses: goreleaser/goreleaser-action@v6
+        with:
+          args: check
 
       - env:
           GH_TOKEN: ${{ github.token }}
