--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -25,7 +25,7 @@ jobs:
 
       - uses: goreleaser/goreleaser-action@v6
         with:
-          args: check
+          install-only: true
 
       - env:
           GH_TOKEN: ${{ github.token }}
