--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -25,5 +25,6 @@ jobs:
           EMAIL="$(git log --format="%aE" "$TAG^!")"
           git config --global user.email -- "$EMAIL"
           git config --global user.name -- "$GH_USER"
-          gh release create -- "$TAG"
           git tag --message '' -- "_$TAG"
+          git push --tags
+          gh release create -- "$TAG"
