--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -21,8 +21,9 @@ jobs:
           fetch-depth: 0
 
       - env:
-          TAG: ${{ github.ref }}
+          REF: ${{ github.ref }}
         run: |-
+          TAG="$(basename -- "$REF")"
           git tag --delete -- "$TAG"
           git push --tags
 
