--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -3,10 +3,8 @@ name: Publish Draft Release with Binaries
 
 on:
   workflow_dispatch:
-  push:
-    #
-    tags:
-      - "_v*"
+  release:
+    types: [prereleased]
 
 permissions:
   contents: write
@@ -19,12 +17,6 @@ jobs:
         with:
           # Allow goreleaser to access older tag information.
           fetch-depth: 0
-
-      - run: |-
-          TAG="$(git describe --tags --abbrev=0)"
-          TAG="_${TAG#_}"
-          git tag --delete -- "$TAG"
-          git push --delete origin "$TAG"
 
       - uses: actions/setup-go@v5
 
